--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
   "cSpell.words": [
+    "appstore",
     "consectetur",
     "Cras",
     "fermentum",
     "iwatch",
     "mattis",
+    "pinterest",
+    "playstore",
     "Tanjin",
     "touchpad",
     "Userfriendly"
